--- a/first_Spriingboot_project/pom.xml
+++ b/first_Spriingboot_project/pom.xml
@@ -59,6 +59,12 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+    <groupId>com.fasterxml.jackson.dataformat</groupId>
+    <artifactId>jackson-dataformat-xml</artifactId>
+   
+</dependency>
+
 	</dependencies>
 
 	<build>
