--- a/first_Spriingboot_project/src/main/resources/application.properties
+++ b/first_Spriingboot_project/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+server.port=8090
 eid=101
 name=sudeep
 age=22
